# A-Table-LLM

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
airtable_analyzer/: __init__.py  airtable_client.py  cli.py  config.py  exceptions.py  logging_config.py  report_builder.py  service.py
examples/: mock_analysis.py  run_analysis.py
src/airtable_analyzer/: cli.py  gemini_client.py  models.py  report_builder.py  schema_processor.py
tests/: conftest.py  test_airtable_client.py  test_gemini_client.py  test_report_builder.py  test_schema_processor.py  test_service.py
